# casdk-template

./: .env.example  .gitignore  CLAUDE.md  MULTILINE_INPUT_GUIDE.md  README.md  pyproject.toml
.claude/: context-agent.md
.claude/skills/: README.md
.claude/skills/joplin-formatting/: SKILL.md
.claude/skills/joplin-formatting/resources/: css-reference.md  element-catalog.md  validate_joplin_md.py
.claude/skills/joplin-research/: SKILL.md
.claude/skills/joplin-research/resources/: citation-guide.md  image-policy.md
.claude/skills/joplin-research/resources/templates/: article-summary.md  book-summary.md  research-notes.md  technical-rundown.md  technical-survey.md  whitepaper-summary.md
.github/workflows/: ci.yml
agents/: agent.py
agents/prompts/: lead_agent.txt  report_writer.txt  researcher.txt
agents/utils/: message_handler.py  subagent_tracker.py  transcript.py
research_agent/: agent.py
research_agent/prompts/: lead_agent.txt  report_writer.txt  researcher.txt
research_agent/utils/: enhanced_input.py
scripts/: analyze_logs.py  clean_logs.sh  lint.sh  run.sh  setup.sh  test.sh
tests/: conftest.py  test_agent_setup.py  test_message_handler.py  test_subagent_tracker.py  test_transcript.py
