[project]
name = "multi-agent-research"
version = "0.1.0"
description = "Simple multi-agent research system using Claude Agents SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.51",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
